# tm1386-synaptics-rp2040-example

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
lib/ps2/: CMakeLists.txt  ps2.cpp  ps2.hpp  ps2.pio
src/: main.cpp
